FIX: fix double lines logs when date is too long

--- a/client-app/app/styles/app.css
+++ b/client-app/app/styles/app.css
@@ -80,7 +80,7 @@ th.severity {
 }
 
 th.time {
-  width: 40px;
+  width: 85px;
   text-align: right;
   padding-right: 20px;
 }
